rubocop/examples/bad/style_RedundantBegin.rb
# TODO: This cop checks for redundant begin blocks
